# hyp3-srg

./: CHANGELOG.md  Dockerfile  Dockerfile.gpu  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-static.txt  setup.py
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: build.yml  changelog.yml  labeled-pr.yml  release-checklist-comment.yml  release.yml  static-analysis.yml  tag-version.yml  test-and-build.yml
.github/workflows/test_and_build/: build.yml
back_projection/: __init__.py  __main__.py  process.py
scripts/: amazon_linux_setup.sh  build_proc.sh  build_proc_cpu.sh  build_proc_gpu.sh  install_cuda.sh  search.py  submit_time_series_job.py  ubuntu_setup.sh
src/hyp3_back_projection/: __main__.py  back_projection.py  dem.py  process.py  utils.py
src/hyp3_back_projection/etc/: entrypoint.sh
src/hyp3_srg/: __init__.py  __main__.py  back_projection.py  convert_srg_outputs.py  dem.py  srg_time_series.py  time_series.py  timeseries.py  utils.py
src/hyp3_srg/etc/: entrypoint.sh
tests/: test_back_projection.py  test_dem.py  test_entrypoints.py  test_time_series.py  test_utils.py
